# k8s-wish-system

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.runtime  INSTALL.md  Makefile  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  build-images.sh  demo-cleanup.md  demo-install.md  demo-script.md  slides.html  talk.md  tcp_proxy.py
k8s/: bootstrap-builder.yaml  config.yaml  crd.yaml  deployments-runtime.yaml  deployments.yaml  examples.yaml  install.yaml  namespace.yaml  rbac-fulfiller.yaml  rbac-grantor.yaml
scripts/: README.md  configure-llm.sh  install.sh
src/: lib.rs
