[package]
name = "wish-system"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wish-grantor"
path = "src/bin/wish-grantor.rs"

[[bin]]
name = "wish-fulfiller"
path = "src/bin/wish-fulfiller.rs"

[[bin]]
name = "kubectl-wish"
path = "src/bin/kubectl-wish.rs"

[dependencies]
kube = { version = "0.87", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
async-trait = "0.1"
schemars = { version = "0.8", features = ["chrono"] }
